--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -12,8 +12,9 @@ $card-highlight-border-color:#f2f8f9;
 $card-highlight__hover-box-shadow: #26262633;
 $card-highlight__hover-border: #ff0808;
 $card-highlight__hover-background-color: white;
-$main-nav__list-color:#2182cd;
-$main-nav__link-hover-color: rgba(14, 59, 92, 0.93);
+$main-nav__link-hover-color:#2182cd;
+$main-nav__link-selected-color: #4aa3f1;
+$main-nav__link-color: rgba(113, 155, 190, 0.93);
 
 :export{
   defaultcardHighlightColor: $default-card-highlight-color;
